// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keeper harvest calculates delta since last update 1`] = `
Object {
  "calldataByteLength": 132,
  "gasUsed": 68044,
}
`;

exports[`Keeper harvest succeeds for already harvested vault 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 65566,
}
`;

exports[`Keeper harvest succeeds for not harvested vault 1`] = `
Object {
  "calldataByteLength": 260,
  "gasUsed": 131736,
}
`;

exports[`Keeper set rewards root succeeds 1`] = `
Object {
  "calldataByteLength": 676,
  "gasUsed": 132356,
}
`;
